--- a/Web Application/myproject/app/templates/homepage.html
+++ b/Web Application/myproject/app/templates/homepage.html
@@ -210,12 +210,12 @@
 	}
 	
 	function getConsDesc(){
-		document.getElementById("traitDesc").innerHTML = "Your level of Sociability and Enthusiasm";
+		document.getElementById("traitDesc").innerHTML = "Your level of Organization and Work Ethic";
 		document.getElementById("myModal").style.display = 'block';
 	}
 	
 	function getExtraDesc(){
-		document.getElementById("traitDesc").innerHTML = "Your level of Organization and Work Ethic";
+		document.getElementById("traitDesc").innerHTML = "Your level of Sociability and Enthusiasm";
 		document.getElementById("myModal").style.display = 'block';
 	}
 	
@@ -240,8 +240,9 @@
 		}
 	}
 </script>
-
+<a href="http://localhost:5000" class="btn red">Back</a>
 <div id="wrapper">
+	
 	<h1>Big Five Personality<small>From Facebook </small></h1>
 	<h2><a href="http://localhost:5000" title="Visit our Homepage">My Persona</a></h2>
 	<div id="content">
